<resources>
    <string name="app_name">Simple Interest Calculator</string>
    <string name="principle_amount_of_money">Principle Amount of Money:</string>
    <string name="interest_rate">Interest Rate:</string>
    <string name="principle_amount_of_money_no_colon">Principle Amount of Money</string>
    <string name="interest_rate_no_colon">Interest Rate</string>
    <string name="percent_sign">%</string>
    <string name="start_date">Start Date:</string>
    <string name="start_date_here" translatable="false">START DATE HERE</string>
    <string name="pick_start_date">Pick Start Date</string>
    <string name="end_date">End Date:</string>
    <string name="end_date_here" translatable="false">END DATE HERE</string>
    <string name="pick_end_date">Pick End Date</string>
    <string name="_0_days">0 Days</string>
    <string name="days">days.</string>
    <string name="result_here">Result Here</string>
    <string name="calculate_interest_and_total">Calculate result</string>
    <string name="total">Total:</string>
    <string name="interest">Interest:</string>
</resources>
